2006-08-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/generic.js: adapted code for the new
	implementation of the UIxContactSelector component (added a
	"remove" button, removed the previous INPUT and replaced them with
	links of class "button").

	* UI/Scheduler/UIxTimeDateControl.h: separated interface from
	UIxTimeDateControl.m.

	* UI/Scheduler/UIxCalDayTable.m ([UIxCalDayTable -currentAppointmentDay]) 
	([UIxCalDayTable -currentAppointmentHour]): new methods that
	returns correctly formatted values used as attributes for JS code.

	* UI/Contacts/UIxContactSelector.m ([UIxContactSelector
	-initialContactsAsString]): renamed implementation of
	initialParticipants.
	([UIxContactSelector -currentContactId]) 
	([UIxContactSelector -currentContactName]): new methods used when
	listing the initial contacts in the widget. Currently, both return
	the person's cn but the latter should ultimately return a user
	fullname.

	* UI/Contacts/UIxContactSelector.h: separated interface from
	UIxContactSelector.m.

	* UI/Scheduler/UIxDatePickerScript.[hm]: component removed since
	all javascript code is now put in Scheduler.js/generic.js.

	* UI/Scheduler/NSCalendarDate+UIx.[hm]: category removed, code
	moved into NSCalendarDate+Scheduler instead.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -setTimeZone:newTZ]): new method to
	configure the timezone from SOGoUserFolder when the instance is
	being created.
	([SOGoAppointmentFolder -viewTimeZone]): MET was removed. Returns
	the value of the new "timezone" ivar.

2006-08-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SchedulerUI.{css,js}: added a tabview with
	the date selector in the first page and the container of the
	future calendar selector in the second page.

	* UI/WebServerResources/generic.js: added code for handling tabbed
	views.

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -productFrameworkName]):