@@ -5,26 +5,36 @@
     xmlns:const="http://www.skyrix.com/od/constant"
     xmlns:rsrc="OGo:url"
     >
-    <table cellpadding="0" cellspacing="2">
-      <tr>
-        <var:if condition="displayTimeControl">
-          <td>
-            <var:component className="UIxTimeSelector"
-              timeID="timeID"
-              hour="hour"
-              minute="minute"
-              />
-          </td>
-        </var:if>
-        <td>
-          <var:component className="UIxDatePicker"
-            dateID="dateID"
-            year="year"
-            month="month"
-            day="day"
-            label="label"
-            />
-        </td>
-      </tr>
-    </table>
+    <var:component className="UIxDatePicker"
+      dateID="dateID"
+      year="year"
+      month="month"
+      day="day"
+      label="label"
+      />
+    <var:if condition="displayTimeControl">
+      <select var:name="hourSelectId">
+        <var:foreach list="selectableHours" item="hourOption"
+          ><var:if condition="isCurrentHour"
+            ><option var:value="hourValue" selected="selected"
+              ><var:string value="hourLabel"
+                /></option></var:if
+            ><var:if condition="isCurrentHour" const:negate="YES"
+            ><option var:value="hourValue"><var:string value="hourLabel"
+                /></option></var:if>
+        </var:foreach
+          ></select>
+      <select var:name="minuteSelectId">
+        <var:foreach list="selectableMinutes" item="minuteOption"
+          ><var:if condition="isCurrentMinute"
+            ><option var:value="minuteValue" selected="selected"
+              ><var:string value="minuteLabel"
+                /></option></var:if
+            ><var:if condition="isCurrentMinute" const:negate="YES"
+            ><option var:value="minuteValue"
+              ><var:string value="minuteLabel"
+                /></option></var:if>
+        </var:foreach
+      ></select>
+    </var:if>
   </span>
