@@ -1,13 +1,0 @@
-<?xml version='1.0' standalone='yes'?>
-  <span xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:var="http://www.skyrix.com/od/binding"
-    xmlns:const="http://www.skyrix.com/od/constant"
-    xmlns:rsrc="OGo:url"
-    var:id="timeID"
-    >
-    <var:time-field hour="hour"
-      minute="minute"
-      minuteInterval="minuteInterval"
-      name="timeID"
-      />
-  </span>
